chore: fix z-index

--- a/web/src/less/home.less
+++ b/web/src/less/home.less
@@ -15,7 +15,7 @@
       @apply relative w-full max-w-2xl min-h-full flex flex-col justify-start items-start px-4 sm:pr-6;
 
       > .memos-editor-wrapper {
-        @apply sticky top-0 w-full h-full flex flex-col justify-start items-start z-1;
+        @apply sticky top-0 w-full h-full flex flex-col justify-start items-start z-10;
         background-color: #f6f5f4;
       }
     }
