--- a/web/src/less/shortcut-list.less
+++ b/web/src/less/shortcut-list.less
@@ -86,7 +86,8 @@
           @apply flex-col justify-start items-start absolute top-6 right-0 w-auto h-auto px-4 pt-3 hidden z-1;
 
           > .action-btns-container {
-            @apply flex flex-col justify-start items-start w-24 h-auto p-1 whitespace-nowrap rounded-md bg-white shadow;
+            @apply flex flex-col justify-start items-start w-24 h-auto p-1 whitespace-nowrap rounded-md bg-white;
+            box-shadow: 0 0 8px 0 rgb(0 0 0 / 20%);
 
             > .btn {
               @apply w-full text-sm leading-6 py-1 px-3 rounded text-left hover:bg-gray-100;
